Added page for APTCOMPLEX DB

--- a/apartmentdb.html
+++ b/apartmentdb.html
@@ -30,11 +30,10 @@
     <main class="content">
       <section class="projects">
         <div class="container">
-          <h1>My Projects<br /><br /></h1>
+          <h1>APARTMENT COMPLEX DATABASE<br /><br /></h1>
           <ul class="projects-list">
-            <li>
               <a
-                href="/apartmentdb.hmtl"
+                href=" "
                 data-sr-id="1"
                 style="
                   visibility: visible;
@@ -59,45 +58,6 @@
                 <span class="h5">SQL, phpMyAdmin </span>
                 <h3>Apartment Complex Database</h3>
               </a>
-            </li>
-
-            <li>
-              <a
-                href=" "
-                data-sr-id="1"
-                style="
-                  visibility: visible;
-                  -webkit-transform: translateY(0) scale(1);
-                  opacity: 1;
-                  transform: translateY(0) scale(1);
-                  opacity: 1;
-                  -webkit-transition: -webkit-transform 0.8s
-                      cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
-                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
-                  transition: transform 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
-                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
-                "
-              >
-                <div class="img-wrapper">
-                  <img src="/img/thumbnail1.png" alt="TicTacToeIMG" />
-                </div>
-                <span class="h5">C Standard Language </span>
-                <h3>TicTacToe in C</h3>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="intro">
-        <div class="container">
-          <p class="semibold"><br /><br /><br />About me</p>
-          <h5>
-            I'm a student pursuing his Bachelor's in Computer Science at the
-            University Of Colorado Denver and am set to graduate Spring of 2025.
-          </h5>
-        </div>
-      </section>
     </main>
   </body>
 </html>
