Fixed href in index to aptcomplex page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <ul class="projects-list">
             <li>
               <a
-                href="/apartmentdb.hmtl"
+                href="/apartmentdb/"
                 data-sr-id="1"
                 style="
                   visibility: visible;
