updated html and css

--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             >Github</a
           >
         </h1>
+        <h2>
+          <section class="intro">
+            <div class="container">
+              <p class="semibold"><br /><br /><br />About me</p>
+              <h5>
+                I'm a student pursuing his Bachelor's in Computer Science at the
+                University Of Colorado Denver, I expect to graduate Spring of
+                2025. My passion for computers has been a constant since I was a
+                young kid and learning more about their operation continues to
+                grasp my interest.
+              </h5>
+            </div>
+          </section>
+        </h2>
       </div>
     </header>
 
@@ -86,16 +100,6 @@
               </a>
             </li>
           </ul>
-        </div>
-      </section>
-
-      <section class="intro">
-        <div class="container">
-          <p class="semibold"><br /><br /><br />About me</p>
-          <h5>
-            I'm a student pursuing his Bachelor's in Computer Science at the
-            University Of Colorado Denver and am set to graduate Spring of 2025.
-          </h5>
         </div>
       </section>
     </main>
