--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
           <a title="Jacob Lord" href="/">Jacob Lord</a>
         </h1>
         <h1 class="nav">
-          <a title="Resume" href=" " target="_blank">Resume</a>
+          <a
+            title="Resume"
+            href="https://drive.google.com/file/d/1no7imo_kJwDFBmVHcB42gVKihg8bcAec/view?usp=sharing"
+            target="_blank"
+            >Resume</a
+          >
           <a
             title="LinkedIn"
             href="https://www.linkedin.com/in/jacob-m-lord/"
@@ -48,8 +53,30 @@
           <ul class="projects-list">
             <li>
               <a
-                href="/apartmentdb"
-                data-sr-id="1"
+                href="/webscraper.html"
+                style="
+                  visibility: visible;
+                  -webkit-transform: translateY(0) scale(1);
+                  opacity: 1;
+                  transform: translateY(0) scale(1);
+                  opacity: 1;
+                  -webkit-transition: -webkit-transform 0.8s
+                      cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
+                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
+                  transition: transform 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
+                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
+                "
+              >
+                <div class="img-wrapper">
+                  <img src="/img/CSCI_NetworkGraph.png" alt="WebscrapingIMG" />
+                </div>
+                <span class="h5">Python </span>
+                <h3>Web Scraping Exploration</h3>
+              </a>
+            </li>
+            <li>
+              <a
+                href="/apartmentdb.html"
                 style="
                   visibility: visible;
                   -webkit-transform: translateY(0) scale(1);
@@ -95,7 +122,7 @@
                 <div class="img-wrapper">
                   <img src="/img/TTTpic.png" alt="TicTacToeIMG" />
                 </div>
-                <span class="h5">C Standard Language </span>
+                <span class="h5">C Standard</span>
                 <h3>TicTacToe in C</h3>
               </a>
             </li>
