Updated description for DB project

--- a/apartmentdb.html
+++ b/apartmentdb.html
@@ -32,32 +32,26 @@
         <div class="container">
           <h1>APARTMENT COMPLEX DATABASE<br /><br /></h1>
           <ul class="projects-list">
-              <a
-                href=" "
-                data-sr-id="1"
-                style="
-                  visibility: visible;
-                  -webkit-transform: translateY(0) scale(1);
-                  opacity: 1;
-                  transform: translateY(0) scale(1);
-                  opacity: 1;
-                  -webkit-transition: -webkit-transform 0.8s
-                      cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
-                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
-                  transition: transform 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
-                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
-                "
-              >
-                <div class="img-wrapper">
-                  <img
-                    src="/img/thumbnail1.png"
-                    alt="Apartment Complex Database"
-                    style="border: 1px solid black"
-                  />
-                </div>
-                <span class="h5">SQL, phpMyAdmin </span>
-                <h3>Apartment Complex Database</h3>
-              </a>
+            <div class="img-wrapper">
+              <img
+                src="/img/thumbnail1.png"
+                alt="Apartment Complex Database"
+                style="border: 1px solid black"
+              />
+            </div>
+            <span class="h5">SQL, phpMyAdmin </span>
+            <h3>Apartment Complex Database</h3>
+          <h4 title = "Goal"> Goal:
+              <p>
+                As the final for my Database Design class, I developed a database
+                for a fictional apartment complex. Starting with a 3-schema, I created
+                an ER diagram, identified the functional dependencies and normalized them
+                to 3NF. From there I formed the relational algebra and the SQL functions.
+                Utilizing phpMyAdmin, I created the database and filled it with 
+                hundreds of entries of data created by prompting ChatGPT in order to 
+                demonstrate my SQL functions.
+              </p>
+         </h4>
     </main>
   </body>
 </html>
