--- a/webscraper.html
+++ b/webscraper.html
@@ -35,7 +35,7 @@
     <main class="content">
       <section class="projects">
         <div class="container">
-          <h1>WEB SCRAPER<br /><br /></h1>
+          <h1>WEB SCRAPER</h1>
                 <div class="img-wrapper">
                   <img
                     src="/img/CSCI_NetworkGraph.png"
@@ -46,7 +46,6 @@
                 </div>
                 <span class="h5">Python, HTML </span>
                 <h3>Web Scraping Exploration</h3>
-              </a>
               <h4 title = "Goal"> Goal:
                   <p>
                     In order to explore web scraping, I sought out to scrape my college's
