--- a/index.html
+++ b/index.html
@@ -52,21 +52,7 @@
           <h1>My Projects<br /><br /></h1>
           <ul class="projects-list">
             <li>
-              <a
-                href="/webscraper.html"
-                style="
-                  visibility: visible;
-                  -webkit-transform: translateY(0) scale(1);
-                  opacity: 1;
-                  transform: translateY(0) scale(1);
-                  opacity: 1;
-                  -webkit-transition: -webkit-transform 0.8s
-                      cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
-                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
-                  transition: transform 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
-                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
-                "
-              >
+              <a href="/webscraper.html">
                 <div class="img-wrapper">
                   <img src="/img/CSCI_NetworkGraph.png" alt="WebscrapingIMG" />
                 </div>
@@ -75,21 +61,7 @@
               </a>
             </li>
             <li>
-              <a
-                href="/apartmentdb.html"
-                style="
-                  visibility: visible;
-                  -webkit-transform: translateY(0) scale(1);
-                  opacity: 1;
-                  transform: translateY(0) scale(1);
-                  opacity: 1;
-                  -webkit-transition: -webkit-transform 0.8s
-                      cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
-                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
-                  transition: transform 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s,
-                    opacity 0.8s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;
-                "
-              >
+              <a href="/apartmentdb.html">
                 <div class="img-wrapper">
                   <img
                     src="/img/thumbnail1.png"
