Updated header-container stylings.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="header-container">
         <h1 class="logo">
           <a title="Jacob Lord" href="/">Jacob Lord</a>
         </h1>
@@ -29,24 +29,21 @@
             >Github</a
           >
         </h1>
-        <h2>
-          <section class="intro">
-            <div class="container">
-              <p class="semibold"><br /><br /><br />About me</p>
-              <h5>
-                I'm a student pursuing his Bachelor's in Computer Science at the
-                University Of Colorado Denver, I expect to graduate Spring of
-                2025. My passion for computers has been a constant since I was a
-                young kid and learning more about their operation continues to
-                grasp my interest.
-              </h5>
-            </div>
-          </section>
-        </h2>
       </div>
     </header>
 
     <main class="content">
+      <section class="intro">
+        <div class="container">
+          <h1 class="semibold"><br /><br />About me</h1>
+          <h5>
+            I'm a student pursuing his Bachelor's in Computer Science at the
+            University Of Colorado Denver, I expect to graduate Spring of 2025.
+            My passion for computers has been a constant since I was a young kid
+            and learning more about their function continues to fascinate me.
+          </h5>
+        </div>
+      </section>
       <section class="projects">
         <div class="container">
           <h1>My Projects<br /><br /></h1>
