--- a/index.html
+++ b/index.html
@@ -6,72 +6,78 @@
     <title>Jacob Lord</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <header>
-    <div class="header-container">
-      <h1 class="logo">
-        <a title="Jacob Lord" href="/">Jacob Lord</a>
-      </h1>
-      <h1 class="nav">
-        <a
-          title="Resume"
-          href="https://drive.google.com/file/d/1no7imo_kJwDFBmVHcB42gVKihg8bcAec/view?usp=sharing"
-          target="_blank"
-          >Resume</a
-        >
-        <a
-          title="LinkedIn"
-          href="https://www.linkedin.com/in/jacob-m-lord/"
-          target="_blank"
-          >LinkedIn</a
-        >
-        <a title="Github" href="https://github.com/Jacob-Lord" target="_blank"
-          >Github</a
-        >
-      </h1>
-    </div>
-  </header>
-  <body>
-    <main class="content">
-      <section class="intro">
-        <div class="container">
-          <h1 class="semibold"><br /><br />About me</h1>
-          <h5>
-            I'm a student pursuing his Bachelor's in Computer Science at the
-            University Of Colorado Denver, I expect to graduate Spring of 2025.
-            My passion for computers has been a constant since I was a young kid
-            and learning more about their function continues to fascinate me.
-          </h5>
-        </div>
-      </section>
-      <section class="projects">
-        <div class="container">
-          <h1>My Projects<br /><br /></h1>
-          <ul class="projects-list">
-            <li>
-              <a href="/webscraper.html">
-                <div class="img-wrapper">
-                  <img src="/img/CSCI_NetworkGraph.png" alt="WebscrapingIMG" />
-                </div>
-                <span class="h5">Python </span>
-                <h3>Web Scraping Exploration</h3>
-              </a>
-            </li>
-            <li>
-              <a href="/apartmentdb.html">
-                <div class="img-wrapper">
-                  <img
-                    src="/img/thumbnail1.png"
-                    alt="Apartment Complex Database"
-                    style="border: 1px solid black"
-                  />
-                </div>
-                <span class="h5">SQL, phpMyAdmin </span>
-                <h3>Apartment Complex Database</h3>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
-  </body>
+  <main class="Document">
+    <header>
+      <div class="header-container">
+        <h1 class="logo">
+          <a title="Jacob Lord" href="/">Jacob Lord</a>
+        </h1>
+        <h1 class="nav">
+          <a
+            title="Resume"
+            href="https://drive.google.com/file/d/1no7imo_kJwDFBmVHcB42gVKihg8bcAec/view?usp=sharing"
+            target="_blank"
+            >Resume</a
+          >
+          <a
+            title="LinkedIn"
+            href="https://www.linkedin.com/in/jacob-m-lord/"
+            target="_blank"
+            >LinkedIn</a
+          >
+          <a title="Github" href="https://github.com/Jacob-Lord" target="_blank"
+            >Github</a
+          >
+        </h1>
+      </div>
+    </header>
+    <body>
+      <main class="content">
+        <section class="intro">
+          <div class="container">
+            <h1 class="semibold"><br /><br />About me</h1>
+            <h5>
+              I'm a student pursuing his Bachelor's in Computer Science at the
+              University Of Colorado Denver, I expect to graduate Spring of
+              2025. My passion for computers has been a constant since I was a
+              young kid and learning more about their function continues to
+              fascinate me.
+            </h5>
+          </div>
+        </section>
+        <section class="projects">
+          <div class="container">
+            <h1>My Projects<br /><br /></h1>
+            <ul class="projects-list">
+              <li>
+                <a href="/webscraper.html">
+                  <div class="img-wrapper">
+                    <img
+                      src="/img/CSCI_NetworkGraph.png"
+                      alt="WebscrapingIMG"
+                    />
+                  </div>
+                  <span class="h5">Python </span>
+                  <h3>Web Scraping Exploration</h3>
+                </a>
+              </li>
+              <li>
+                <a href="/apartmentdb.html">
+                  <div class="img-wrapper">
+                    <img
+                      src="/img/thumbnail1.png"
+                      alt="Apartment Complex Database"
+                      style="border: 1px solid black"
+                    />
+                  </div>
+                  <span class="h5">SQL, phpMyAdmin </span>
+                  <h3>Apartment Complex Database</h3>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </main>
+    </body>
+  </main>
 </html>
