--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h5>
               I'm a student pursuing his Bachelor's in Computer Science at the
               University Of Colorado Denver, I expect to graduate Spring of
-              2025. My passion for computers has been a constant since I was a
+              2025. My passion for computers has been a constant since I was
               young and learning more about their function continues to
               fascinate me.
             </h5>
