--- a/index.html
+++ b/index.html
@@ -37,46 +37,46 @@
           <div class="container">
             <h1 class="semibold"><br /><br />About me</h1>
             <h5>
-              I'm a student pursuing his Bachelor's in Computer Science at the
-              University Of Colorado Denver, I expect to graduate Spring of
-              2025. My passion for computers has been a constant since I was
-              young and learning more about their function continues to
-              fascinate me.
+              <p>
+                I'm a student pursuing his Bachelor's in Computer Science at the
+                University Of Colorado Denver, I expect to graduate Spring of
+                2025. My passion for computers has been a constant since I was
+                young and learning more about their function continues to
+                fascinate me.
+              </p>
             </h5>
           </div>
         </section>
         <section class="projects">
           <div class="container">
-            <h6>
-              My Projects<br /><br />
-              <ul class="projects-list">
-                <li>
-                  <a href="/webscraper.html">
-                    <div class="img-wrapper">
-                      <img
-                        src="/img/CSCI_NetworkGraph.png"
-                        alt="WebscrapingIMG"
-                      />
-                    </div>
-                    <span class="h5">Python </span>
-                    <h3>Web Scraping Exploration</h3>
-                  </a>
-                </li>
-                <li>
-                  <a href="/apartmentdb.html">
-                    <div class="img-wrapper">
-                      <img
-                        src="/img/thumbnail1.png"
-                        alt="Apartment Complex Database"
-                        style="border: 1px solid black"
-                      />
-                    </div>
-                    <span class="h5">SQL, phpMyAdmin </span>
-                    <h3>Apartment Complex Database</h3>
-                  </a>
-                </li>
-              </ul>
-            </h6>
+            <h6>My Projects<br /><br /></h6>
+            <ul class="projects-list">
+              <li>
+                <a href="/webscraper.html">
+                  <div class="img-wrapper">
+                    <img
+                      src="/img/CSCI_NetworkGraph.png"
+                      alt="WebscrapingIMG"
+                    />
+                  </div>
+                  <span class="h5">Python </span>
+                  <h3>Web Scraping Exploration</h3>
+                </a>
+              </li>
+              <li>
+                <a href="/apartmentdb.html">
+                  <div class="img-wrapper">
+                    <img
+                      src="/img/thumbnail1.png"
+                      alt="Apartment Complex Database"
+                      style="border: 1px solid black"
+                    />
+                  </div>
+                  <span class="h5">SQL, phpMyAdmin </span>
+                  <h3>Apartment Complex Database</h3>
+                </a>
+              </li>
+            </ul>
           </div>
         </section>
       </main>
