--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
     <section class="intro">
       <div class="container">
         <h1 class="semibold">About Me</h1>
-        <p>
+        <p style = "font-size: 150%">
           I'm a student pursuing a Bachelor's in Computer Science at the
           University of Colorado Denver. I expect to graduate in May 2026.
           My passion for computers has been a constant since I was young,
           and learning more about their function continues to fascinate me.
+          <br><br>
+          Lately I have been exploring networking and cybersecurity concepts.
+          Through TCSA I have been able to participate in exciting competitions such
+          as: Hivestorm 2024 and Mountain West Cybersecurity Competition. Completing
+          labs in my free time continues to teach me amazing new skills.
         </p>
       </div>
     </section>
