Updated UDP Project link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   loading="lazy"
                 />
               </div>
-              <span class="h5">Python, Probability/Statistics</span>
+              <span class="h5">Python, Probability/Statistics, Simulation</span>
               <h3>Coin Flip Simulation</h3>
             </a>
           </li>
@@ -127,6 +127,19 @@
               </div>
               <span class="h5">Javascript, Computer Graphics</span>
               <h3>Ray Tracer</h3>
+            </a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/file/d/1JCyCqFcXNEDCbxjuIFrv5iMER8T6lk4N/view?usp=sharing">
+              <div class="img-wrapper">
+                <img
+                  src="./img/UDPImage.png"
+                  alt="UDP Client Socket"
+                  loading="lazy"
+                />
+              </div>
+              <span class="h5">C Standard, Socket Programming, Wireshark, UDP</span>
+              <h3>UDP Socket Client</h3>
             </a>
           </li>
         </ul>
