Updated project links

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </a>
           </li>
           <li>
-            <a href="apartmentdb.html">
+            <a href="https://github.com/Jacob-Lord/CoinFlipSimulation">
               <div class="img-wrapper">
                 <img
                   src="./img/CoinFlip.png"
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li>
-            <a href="apartmentdb.html">
+            <a href="https://github.com/PHP-Ballers/MovieCollection">
               <div class="img-wrapper">
                 <img
                   src="./img/MovieCollection.png"
@@ -117,7 +117,7 @@
             </a>
           </li>
           <li>
-            <a href="apartmentdb.html">
+            <a href="https://github.com/Jacob-Lord/RayTracer">
               <div class="img-wrapper">
                 <img
                   src="./img/RayTracerSphere.png"
