--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <br><br>
           Lately I have been exploring networking and cybersecurity concepts.
           Through TCSA I have been able to participate in exciting competitions such
-          as: Hivestorm 2024 and Mountain West Cybersecurity Competition. Completing
+          as: Hivestorm 2024, Mountain West Cybersecurity Competition, and RMCCDC. Completing
           labs in my free time continues to teach me amazing new skills.
         </p>
       </div>
@@ -130,16 +130,16 @@
             </a>
           </li>
           <li>
-            <a href="https://drive.google.com/file/d/1JCyCqFcXNEDCbxjuIFrv5iMER8T6lk4N/view?usp=sharing">
+            <a href="https://github.com/Jacob-Lord/DistributedFileSystem">
               <div class="img-wrapper">
                 <img
                   src="./img/UDPImage.png"
-                  alt="UDP Client Socket"
+                  alt="Distributed File Sharing System"
                   loading="lazy"
                 />
               </div>
-              <span class="h5">C Standard, Socket Programming, Wireshark, UDP</span>
-              <h3>UDP Socket Client</h3>
+              <span class="h5">C Standard, Network Programming</span>
+              <h3>Distributed File Sharing System</h3>
             </a>
           </li>
         </ul>
