--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
         <p style = "font-size: 150%">
           I'm a student pursuing a Bachelor's in Computer Science at the
           University of Colorado Denver. I expect to graduate in May 2026.
-          My passion for computers has been a constant since I was young,
-          and learning more about their function continues to fascinate me.
+          My passion for computers has been a constant since I was young
+          and learning more about them naively led me to this degree. <br>
+          “Computer Science is no more about computers than astronomy is about telescopes” -Dijkstra
+          <br>
+          Learning while working through this degree has shown me the depth and scope of what Computer Science actually is.
+          My love of computers has grown into a love of the science behind computers and allowed me to dive into subjects
+          that I would have thought scary and too challenging for me. I have learned that I love the challenges and
+          complexities that Computer Science introduces in its pursuit of utilizing technology to solve difficult problems.
           <br><br>
           Lately I have been exploring networking and cybersecurity concepts.
           Through TCSA I have been able to participate in exciting competitions such
