--- a/index.html
+++ b/index.html
@@ -148,6 +148,32 @@
               <h3>Distributed File Sharing System</h3>
             </a>
           </li>
+          <li>
+            <a href="https://github.com/Jacob-Lord/RustSentimentScoring">
+              <div class="img-wrapper">
+                <img
+                  src=""
+                  alt="Sentiment Scorer written in Rust"
+                  loading="lazy"
+                />
+              </div>
+              <span class="h5">Rust</span>
+              <h3>Sentiment Scorer</h3>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/Jacob-Lord/tinyMart">
+              <div class="img-wrapper">
+                <img
+                  src=""
+                  alt="tinyMart, a Object Oriented Programming Marketplace Simulator"
+                  loading="lazy"
+                />
+              </div>
+              <span class="h5">C#, OOP Methodology</span>
+              <h3>tinyMart - OOP Marketplace Simulator</h3>
+            </a>
+          </li>
         </ul>
       </div>
     </section>
