--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <a href="https://github.com/Jacob-Lord/RustSentimentScoring">
               <div class="img-wrapper">
                 <img
-                  src=""
+                  src="./img/sentiment.jpg"
                   alt="Sentiment Scorer written in Rust"
                   loading="lazy"
                 />
