--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <a href="https://github.com/Jacob-Lord/tinyMart">
               <div class="img-wrapper">
                 <img
-                  src=""
+                  src="./img/tinymart.png"
                   alt="tinyMart, a Object Oriented Programming Marketplace Simulator"
                   loading="lazy"
                 />
