--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
           I'm a student pursuing a Bachelor's in Computer Science at the
           University of Colorado Denver. I expect to graduate in May 2026.
           My passion for computers has been a constant since I was young
-          and learning more about them naively led me to this degree. <br>
+          and learning more about how they function naively led me to this degree.
+          <br><br>
           “Computer Science is no more about computers than astronomy is about telescopes” -Dijkstra
-          <br>
+          <br><br>
           Learning while working through this degree has shown me the depth and scope of what Computer Science actually is.
           My love of computers has grown into a love of the science behind computers and allowed me to dive into subjects
           that I would have thought scary and too challenging for me. I have learned that I love the challenges and
