--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/Jacob-Lord/tinyMart">
+            
               <div class="img-wrapper">
                 <img
                   src="./img/tinymart.png"
@@ -173,7 +173,9 @@
               </div>
               <span class="h5">C#, OOP Methodology</span>
               <h3>tinyMart - OOP Marketplace Simulator</h3>
-            </a>
+              <h3 href="https://github.com/Jacob-Lord/tinyMart">Repository</h3>
+              <h3 href="https://drive.google.com/file/d/1k9UPK8M4JK9a1cFHy9GQue1YwExHm2Mw/view?usp=sharing">UML</h3>
+            
           </li>
         </ul>
       </div>
