--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/Jacob-Lord/RayTracer">
+            <h4>Ray Tracer</h4>
               <div class="img-wrapper">
                 <img
                   src="./img/RayTracerSphere.png"
@@ -133,11 +133,11 @@
                 />
               </div>
               <span class="h5">Javascript, Computer Graphics</span>
-              <h3>Ray Tracer</h3>
+              <h3 href="https://github.com/Jacob-Lord/RayTracer">Repository</h3>
             </a>
           </li>
           <li>
-            <a href="https://github.com/Jacob-Lord/DistributedFileSystem">
+            <h4>Distributed File Sharing System</h4>
               <div class="img-wrapper">
                 <img
                   src="./img/UDPImage.png"
@@ -145,12 +145,11 @@
                   loading="lazy"
                 />
               </div>
-              <span class="h5">C Standard, Network Programming</span>
-              <h3>Distributed File Sharing System</h3>
-            </a>
+            <span class="h5">C Standard, Network Programming</span>
+            <h3 href="https://github.com/Jacob-Lord/DistributedFileSystem">Repository</h3>
           </li>
           <li>
-            <a href="https://github.com/Jacob-Lord/RustSentimentScoring">
+            <h4>Sentiment Scorer</h4>
               <div class="img-wrapper">
                 <img
                   src="./img/sentiment.jpg"
@@ -158,12 +157,11 @@
                   loading="lazy"
                 />
               </div>
-              <span class="h5">Rust</span>
-              <h3>Sentiment Scorer</h3>
-            </a>
+            <span class="h5">Rust</span>
+            <h3 href="https://github.com/Jacob-Lord/RustSentimentScoring">Repository</h3>
           </li>
           <li>
-            
+            <h4>tinyMart - OOP Marketplace Simulator</h4>
               <div class="img-wrapper">
                 <img
                   src="./img/tinymart.png"
@@ -172,7 +170,6 @@
                 />
               </div>
               <span class="h5">C#, OOP Methodology</span>
-              <h4>tinyMart - OOP Marketplace Simulator</h4>
               <h3 href="https://github.com/Jacob-Lord/tinyMart">Repository</h3>
               <h3 href="https://drive.google.com/file/d/1k9UPK8M4JK9a1cFHy9GQue1YwExHm2Mw/view?usp=sharing">UML</h3>
             
