--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                 />
               </div>
               <span class="h5">C#, OOP Methodology</span>
-              <h3 href="https://github.com/Jacob-Lord/tinyMart">Repository</h3>
-              <h3 href="https://drive.google.com/file/d/1k9UPK8M4JK9a1cFHy9GQue1YwExHm2Mw/view?usp=sharing">UML</h3>
+              <a href="https://github.com/Jacob-Lord/tinyMart" ></a><h3>Repository</h3> </a>
+              <a href="https://drive.google.com/file/d/1k9UPK8M4JK9a1cFHy9GQue1YwExHm2Mw/view?usp=sharing"> <h3>UML</h3></a>
             
           </li>
         </ul>
