--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2>My Projects</h2>
         <ul class="projects-list">
           <li>
-            <a href="webscraper.html">
+            <h2>Web Scraping Exploration</h2>
               <div class="img-wrapper">
                 <img
                   src="./img/CSCI_NetworkGraph.png"
@@ -68,11 +68,10 @@
                 />
               </div>
               <span class="h5">Python, Data Visualization</span>
-              <h3>Web Scraping Exploration</h3>
-            </a>
+            <a href="webscraper.html"> <h3>Repository</h3>
           </li>
           <li>
-            <a href="apartmentdb.html">
+            <h2>Apartment Complex Database</h2>
               <div class="img-wrapper">
                 <img
                   src="./img/thumbnail1.png"
@@ -80,12 +79,11 @@
                   loading="lazy"
                 />
               </div>
-              <span class="h5">Database Design, SQL, phpMyAdmin</span>
-              <h3>Apartment Complex Database</h3>
-            </a>
+            <span class="h5">Database Design, SQL, phpMyAdmin</span>
+            <a href="apartmentdb.html"> <h3>Repository</h3> </a>
           </li>
           <li>
-            <a href="https://drive.google.com/file/d/1aq8I2v_b-fbEvsvJtufTEdis1Jo2kDnH/view?usp=drive_link">
+            <h2>Injection Traffic Lab</h2>
               <div class="img-wrapper">
                 <img
                   src="./img/SQLInject.png"
@@ -93,12 +91,11 @@
                   loading="lazy"
                 />
               </div>
-              <span class="h5">SQL, Wireshark</span>
-              <h3>Injection Traffic Lab</h3>
-            </a>
+            <span class="h5">SQL, Wireshark</span>
+            <a href="https://drive.google.com/file/d/1aq8I2v_b-fbEvsvJtufTEdis1Jo2kDnH/view?usp=drive_link"> <h3>Report</h3> </a>
           </li>
           <li>
-            <a href="https://github.com/Jacob-Lord/CoinFlipSimulation">
+            <h2>Coin Flip Simulation</h2>
               <div class="img-wrapper">
                 <img
                   src="./img/CoinFlip.png"
@@ -106,12 +103,11 @@
                   loading="lazy"
                 />
               </div>
-              <span class="h5">Python, Probability/Statistics, Simulation</span>
-              <h3>Coin Flip Simulation</h3>
-            </a>
+            <span class="h5">Python, Probability/Statistics, Simulation</span>
+            <a href="https://github.com/Jacob-Lord/CoinFlipSimulation"> <h3>Coin Flip Simulation</h3> </a>
           </li>
           <li>
-            <a href="https://github.com/PHP-Ballers/MovieCollection">
+            <h2>Movie Collection Group Project</h2>
               <div class="img-wrapper">
                 <img
                   src="./img/MovieCollection.png"
@@ -119,9 +115,8 @@
                   loading="lazy"
                 />
               </div>
-              <span class="h5">PHP, HTML, CSS, SQL, phpMyAdmin</span>
-              <h3>Movie Collection Group Project</h3>
-            </a>
+            <span class="h5">PHP, HTML, CSS, SQL, phpMyAdmin</span>
+            <a href="https://github.com/PHP-Ballers/MovieCollection"> <h3>Repository</h3> </a>
           </li>
           <li>
             <h4>Ray Tracer</h4>
@@ -133,7 +128,7 @@
                 />
               </div>
               <span class="h5">Javascript, Computer Graphics</span>
-              <h3 href="https://github.com/Jacob-Lord/RayTracer">Repository</h3>
+              <a href="https://github.com/Jacob-Lord/RayTracer"> <h3>Repository</h3> </a>
             </a>
           </li>
           <li>
@@ -146,7 +141,7 @@
                 />
               </div>
             <span class="h5">C Standard, Network Programming</span>
-            <h3 href="https://github.com/Jacob-Lord/DistributedFileSystem">Repository</h3>
+            <a href="https://github.com/Jacob-Lord/DistributedFileSystem"> <h3>Repository</h3> </a>
           </li>
           <li>
             <h4>Sentiment Scorer</h4>
@@ -170,8 +165,8 @@
                 />
               </div>
               <span class="h5">C#, OOP Methodology</span>
-              <a href="https://github.com/Jacob-Lord/tinyMart" ></a><h3>Repository</h3> </a>
-              <a href="https://drive.google.com/file/d/1k9UPK8M4JK9a1cFHy9GQue1YwExHm2Mw/view?usp=sharing"> <h3>UML</h3></a>
+              <a href="https://github.com/Jacob-Lord/tinyMart" > <h3>Repository</h3> </a>
+              <a href="https://drive.google.com/file/d/1k9UPK8M4JK9a1cFHy9GQue1YwExHm2Mw/view?usp=sharing"> <h3>UML</h3> </a>
             
           </li>
         </ul>
