--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 />
               </div>
             <span class="h5">Rust</span>
-            <h3 href="https://github.com/Jacob-Lord/RustSentimentScoring">Repository</h3>
+            <a href="https://github.com/Jacob-Lord/RustSentimentScoring"> <h3>Repository</h3> </a>
           </li>
           <li>
             <h4>tinyMart - OOP Marketplace Simulator</h4>
