--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 />
               </div>
               <span class="h5">Python, Data Visualization</span>
-            <a href="webscraper.html"> <h3>Repository</h3>
+            <a href="webscraper.html"> <h3>Repository</h3> </a>
           </li>
           <li>
             <h4>Apartment Complex Database</h4>
