--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           “Computer Science is no more about computers than astronomy is about telescopes” -Dijkstra
           <br><br>
           Learning while working through this degree has shown me the depth and scope of what Computer Science actually is.
-          My love of computers has grown into a love of the science behind computers and allowed me to dive into subjects
+          My love of computers has grown into a love of the science of computation and allowed me to dive into subjects
           that I would have thought scary and too challenging for me. I have learned that I love the challenges and
           complexities that Computer Science introduces in its pursuit of utilizing technology to solve difficult problems.
           <br><br>
