--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
             <a href="apartmentdb.html"> <h3>Repository</h3> </a>
           </li>
           <li>
+            <h4>Hardcoded Pswd Checker - Static Code Analysis Tool</h4>
+              <div class="img-wrapper">
+                <img
+                  src="./img/thumbnail1.png"
+                  alt="Hardcoded Password Checker, A static code analysis tool"
+                  loading="lazy"
+                />
+              </div>
+            <span class="h5">Python, regex, cybersecurity programming</span>
+            <a href="https://github.com/Jacob-Lord/backdoor_simulation"> <h3>Repository</h3> </a>
+          </li>
+          <li>
             <h4>Injection Traffic Lab</h4>
               <div class="img-wrapper">
                 <img
