--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   loading="lazy"
                 />
               </div>
-              <span class="h5">Python, Data Visualization</span>
+              <span class="h5">Python, Data Visualization, web scraping</span>
             <a href="webscraper.html"> <h3>Repository</h3> </a>
           </li>
           <li>
@@ -83,7 +83,8 @@
             <a href="apartmentdb.html"> <h3>Repository</h3> </a>
           </li>
           <li>
-            <h4>Hardcoded Pswd Checker - Static Code Analysis Tool</h4>
+            <h4>Hardcoded Pswd Checker</h4>
+            <h5>Static Code Analysis Tool</h5>
               <div class="img-wrapper">
                 <img
                   src="./img/thumbnail1.png"
