Added a new project
 ML prediction of cardiovascular diseases created in Orange

--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
             <a href="https://github.com/Jacob-Lord/tinyMart" > <h3>Repository</h3> </a>
             <a href="https://drive.google.com/file/d/1k9UPK8M4JK9a1cFHy9GQue1YwExHm2Mw/view?usp=sharing"> <h3>UML</h3> </a>
           </li>
+          <li>
+            <h4>Cardiovascular Disease Prediction</h4>
+              <div class="img-wrapper">
+                <img
+                  src="./img/CSCI_NetworkGraph.png"
+                  alt="A Picture of a Human Heart"
+                  loading="lazy"
+                />
+              </div>
+              <span class="h5">Orange, Machine Learning, Data Analysis</span>
+            <a href=""> <h3>TBD</h3> </a>
+          </li>
         </ul>
       </div>
     </section>
