--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h5>Static Code Analysis Tool</h5>
               <div class="img-wrapper">
                 <img
-                  src="./img/magnifying_glass.png"
+                  src="./img/magnifying_glass.jpg"
                   alt="Hardcoded Password Checker, A static code analysis tool"
                   loading="lazy"
                 />
