--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
           that I would have thought scary and too challenging for me. I have learned that I love the challenges and
           complexities that Computer Science introduces in its pursuit of utilizing technology to solve difficult problems.
           <br><br>
-          Lately I have been exploring networking and cybersecurity concepts.
           Through TCSA I have been able to participate in exciting competitions such
           as: Hivestorm 2024, Mountain West Cybersecurity Competition, and RMCCDC. Completing
           labs in my free time continues to teach me amazing new skills.
@@ -58,6 +57,17 @@
       <div class="container">
         <h2>My Projects</h2>
         <ul class="projects-list">
+          <li>
+            <h4>Blue Bird Buzzer Music - Arduino Project</h4>
+              <div class="img-wrapper">
+                <img
+                  src=""
+                  alt="Image of Arduino built with LEDs and a passive buzzer"
+                  loading="lazy">
+              </div>
+            <span class="h5">Arduino, C++, Music</span>
+            <a href=""><h3>Report</h3> </a>  
+          </li>
           <li>
             <h4>Web Scraping Exploration</h4>
               <div class="img-wrapper">
@@ -117,7 +127,7 @@
                 />
               </div>
             <span class="h5">Python, Probability/Statistics, Simulation</span>
-            <a href="https://github.com/Jacob-Lord/CoinFlipSimulation"> <h3>Coin Flip Simulation</h3> </a>
+            <a href="https://github.com/Jacob-Lord/CoinFlipSimulation"> <h3>Repository</h3> </a>
             </li>
             <li>
             <h4>Movie Collection Group Project</h4>
